# InkMind

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
.scratch/: issue-11-agent-brief.md  issue-17-decision-comment.md  issue-32-resolution.md  map-12-body.md  spec-12-body.md
.scratch/code-review-fixes-2026-07/: MIGRATED.md
.scratch/research/: export-formats.md  llm-provider.md  memory-architecture.md  persistence-strategy.md
.scratch/wayfinder/: map.md
.soloncode/: AGENTS.md  CODE.md  settings.json
.soloncode/memory/: shared__inkmind-code-review-fixes-2026-07.md  shared__inkmind-novel-hierarchy.md  shared__inkmind-project-complete-architecture.md  shared__inkmind-world-model.md
docs/: ds.md  网络小说百万字大纲研究报告.md
docs/adr/: 0001-domain-model-foundation.md  0002-agent-pipeline-protocol.md  0003-four-tier-memory-architecture.md  0004-multi-provider-strategy.md  0005-transactional-persistence.md  0007-cli-design.md  (+6 more)
inkmind/: __main__.py  errors.py
prototypes/: outline-view-v2.html
tests/: test_agent_pipeline.py  test_annotations.py  test_cli.py  test_collaboration.py  test_compression_pipeline.py  test_concurrency.py  test_integration.py  test_llm_observability.py  test_llm_providers.py  test_manual_edit.py  test_memory_models.py  test_outline_spine.py  test_provider_failover.py  test_review_finalize.py  test_revision_annotations.py  test_run_execution.py  test_storage.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+117 files in other folders)
