[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inkmind"
version = "0.1.0"
description = "AI 小说协作写作系统"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]
[project.scripts]
inkmind = "inkmind.cli.main:main"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=7.0",
    "pytest-asyncio",
    "ruff>=0.15.22",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["inkmind"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E712", "E402"]

[tool.mypy]
plugins = ["pydantic.mypy"]
warn_return_any = true
check_untyped_defs = true
